# sqlite-rag-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/sqlite_rag_mcp/: __init__.py  __main__.py  chunker.py  config.py  db.py  embeddings.py  index.py  indexer.py  retry.py  search.py  server.py
tests/: conftest.py  test_chunker.py  test_index_and_search.py  test_mcp_smoke.py
tests/fixtures/: authentication.md  caching.md  changelog.md  configuration.md  deployment.md  getting-started.md  troubleshooting.md
